--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,6 +1,12 @@
-<div>
-    <h1>Productos</h1>
-    
-</div>
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ecommerce</title>
+</head>
+<body>
+    {{{ body }}}
+</body>
+</html>
